[gd_scene load_steps=6 format=3 uid="uid://dsb1usrbx1qbf"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_qellr"]
[ext_resource type="Texture2D" uid="uid://bk6i823jkdloc" path="res://assets/tempFolder/5559852.jpg" id="1_shogk"]
[ext_resource type="PackedScene" uid="uid://b5qtagl08dcrp" path="res://scenes/menus/level/level_menu.tscn" id="2_epsll"]
[ext_resource type="PackedScene" uid="uid://blkplnvql6420" path="res://scenes/menus/settings/settings_menu.tscn" id="2_pvmx4"]

[sub_resource type="SystemFont" id="SystemFont_ylhs0"]
font_names = PackedStringArray("Impact")

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qellr")
main_game_packed_scene = ExtResource("2_epsll")

[node name="main" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="main"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_shogk")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="main"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 36

[node name="VBoxContainer" type="VBoxContainer" parent="main/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 2

[node name="Title" type="Label" parent="main/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_ylhs0")
theme_override_font_sizes/font_size = 64
text = "Chrono//Break
"
horizontal_alignment = 1

[node name="Start Button" type="Button" parent="main/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_ylhs0")
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="Settings Button" type="Button" parent="main/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_ylhs0")
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="Quit Button" type="Button" parent="main/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_ylhs0")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="settings_menu" parent="." instance=ExtResource("2_pvmx4")]
layout_mode = 1

[connection signal="button_down" from="main/MarginContainer/VBoxContainer/Start Button" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="main/MarginContainer/VBoxContainer/Settings Button" to="." method="_on_settings_button_button_down"]
[connection signal="button_down" from="main/MarginContainer/VBoxContainer/Quit Button" to="." method="_on_quit_button_button_down"]

[editable path="settings_menu"]
